--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 .idea/**
 __pycache__/**
 excel_files/**
+classifiers/__pycache__/predict.cpython-38.pyc
+classifiers/__pycache__/test_model.cpython-38.pyc
+classifiers/__pycache__/train_model.cpython-38.pyc
+features/__pycache__/headbytes.cpython-38.pyc
+features/__pycache__/feature.cpython-38.pyc
+features/__pycache__/randbytes.cpython-38.pyc
+features/__pycache__/randhead.cpython-38.pyc
+features/readers/__pycache__/readers.cpython-38.pyc
+stored_models/trained_classifiers/rf-head-2021-06-30.pkl
+stored_models/trained_classifiers/rf-head-2021-06-30-info.json
+stored_models/class_tables/CLASS_TABLE-rf-head-2021-06-30.json
