--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ stored_models/trained_classifiers/rf-head-2021-06-30-info.json
 stored_models/class_tables/CLASS_TABLE-rf-head-2021-06-30.json
 classifiers/predict.py
 directory_predictions.json
+stored_models/trained_classifiers/rf-head-2021-07-01.pkl
+stored_models/trained_classifiers/rf-head-2021-07-01-info.json
+stored_models/class_tables/CLASS_TABLE-svc-head-2021-07-01.json
+stored_models/class_tables/CLASS_TABLE-rf-head-2021-07-01.json
