--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ stored_models/class_tables/CLASS_TABLE-rf-head-2021-06-22.json
 classifiers/predict.py
 .gitignore
 directory_probability_predictions.json
+byteSizeData/
