--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ Scheduler/Experiment2
 Scheduler/Experiment3
 Scheduler/Experiment4
 Scheduler/Experiment4_images
+Scheduler/EXPERIMENT4_FINALIMAGES
+Scheduler/EXPERIMENT4_PAPERIMAGES
