Starting to implement the regressions

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ Scheduler/Experiment4
 Scheduler/Experiment4_images
 Scheduler/EXPERIMENT4_FINALIMAGES
 Scheduler/EXPERIMENT4_PAPERIMAGES
+Scheduler/Regressor/toyData
