--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ Scheduler/Experiment4_images
 Scheduler/EXPERIMENT4_FINALIMAGES
 Scheduler/EXPERIMENT4_PAPERIMAGES
 Scheduler/Regressor/toyData
+Scheduler/Regressor/Model_Pile_keyword.pkl
