--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ Scheduler/cdiac_error_files_2
 Scheduler/cdiac_priority_list
 Scheduler/cdiac_priority_list_2
 Scheduler/csv-try-2.csv
+Scheduler/cdiac_error_files_3.pkl
+.gitignore
+Scheduler/cdiac_priority_list_3.pkl
